attempting to fix the invisible-cover-text issue in the webkit-but-retarded safari

--- a/janiczek.css
+++ b/janiczek.css
@@ -26,7 +26,6 @@ body {
 }
 .grad {
     color: #40c48f;
-    list-style: none;
     -webkit-text-fill-color: transparent;
     /* got rid of the non-webkit options since this css trick only works properly on webkit anyway, this way non-webkit browsers
     fall back to defaults instead of displaying weird effects
@@ -34,6 +33,7 @@ body {
     background-clip: text; */
     background: -webkit-linear-gradient(135deg, #7f0000 16%,#40c48f 85%);
     -webkit-background-clip: text;
+    z-index: 2;
 }
 .section-container {
     text-align: center;
@@ -163,6 +163,9 @@ body {
 }
 #navbar ul a:active {
     transform: translateY(0.2rem);
+}
+#navbar ul a li {
+    list-style: none;
 }
 .glued {
     position: fixed;
